--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 			</div>
 			<!-- /wp:spacer -->
 
-			<!-- wp:post-title {"textAlign":"left","level":1} /-->
+			<!-- wp:post-title {"isLink":true,"textAlign":"left","level":1} /-->
 
 			<!-- wp:spacer {"height":"var:preset|spacing|30","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
 			<div style="margin-top:0;margin-bottom:0;height:var(--wp--preset--spacing--30)" aria-hidden="true" class="wp-block-spacer"></div>
