--- a/assets/scss/blocks/core/navigation.scss
+++ b/assets/scss/blocks/core/navigation.scss
@@ -19,16 +19,27 @@
 			text-wrap: nowrap;
 			transition: all 0.2s ease-in-out;
 
+			&::before {
+				content: '';
+				left: 50%;
+				transition: all 0.3s ease;
+				width: 0%;
+			}
+
+			&::after {
+				content: '';
+				left: 50%;
+				transition: all 0.3s ease;
+				width: 0;
+			}
+
 			&:hover,
 			&:focus {
-				-webkit-text-stroke: unset;
-				color: var(--wp--custom--navigation-link-hover--color);
+				-webkit-text-stroke: 0.5px var(--wp--preset--color--accent-1);
 				outline: none;
 
 				&::before {
-					background: var(
-						--wp--custom--navigation-background--background
-					);
+					background: var(--wp--preset--color--accent-1);
 					bottom: 0;
 					content: '';
 					height: 2px;
@@ -38,9 +49,7 @@
 				}
 
 				&::after {
-					background: var(
-						--wp--custom--navigation-background--background
-					);
+					background: var(--wp--preset--color--accent-1);
 					bottom: 0;
 					content: '';
 					height: 2px;
@@ -48,10 +57,6 @@
 					position: absolute;
 					width: 50%;
 				}
-			}
-
-			&:focus {
-				outline: auto;
 			}
 
 			&[aria-current='page'] {
