Add home template

--- a/assets/scss/base/global.scss
+++ b/assets/scss/base/global.scss
@@ -35,57 +35,60 @@ sup {
 .site-footer {
 
 	a {
-		color: var(--wp--preset--color--accent-1);
-		cursor: pointer;
-		padding: 0;
-		position: relative;
-		text-decoration: none;
-		text-overflow: ellipsis;
-		text-wrap: nowrap;
-		transition: all 0.2s ease-in-out;
 
-		&::before {
-			content: '';
-			left: 50%;
-			transition: all 0.3s ease;
-			width: 0%;
-		}
-
-		&::after {
-			content: '';
-			left: 50%;
-			transition: all 0.3s ease;
-			width: 0;
-		}
-
-		&:hover,
-		&:focus {
-			-webkit-text-stroke: 0.5px var(--wp--preset--color--accent-1);
-			outline: none;
+		&:not(.wp-block-social-link-anchor):not(.back-to-top) {
+			color: var(--wp--preset--color--accent-1);
+			cursor: pointer;
+			padding: 0;
+			position: relative;
+			text-decoration: none;
+			text-overflow: ellipsis;
+			text-wrap: nowrap;
+			transition: all 0.2s ease-in-out;
 
 			&::before {
-				background: var(--wp--preset--color--accent-1);
-				bottom: 0;
 				content: '';
-				height: 2px;
-				left: 0;
-				position: absolute;
-				width: 50%;
+				left: 50%;
+				transition: all 0.3s ease;
+				width: 0%;
 			}
 
 			&::after {
-				background: var(--wp--preset--color--accent-1);
-				bottom: 0;
 				content: '';
-				height: 2px;
 				left: 50%;
-				position: absolute;
-				width: 50%;
+				transition: all 0.3s ease;
+				width: 0;
 			}
-		}
 
-		&:focus {
-			outline: auto;
+			&:hover,
+			&:focus {
+				-webkit-text-stroke: 0.5px var(--wp--preset--color--accent-1);
+				outline: none;
+
+				&::before {
+					background: var(--wp--preset--color--accent-1);
+					bottom: 0;
+					content: '';
+					height: 2px;
+					left: 0;
+					position: absolute;
+					width: 50%;
+				}
+
+				&::after {
+					background: var(--wp--preset--color--accent-1);
+					bottom: 0;
+					content: '';
+					height: 2px;
+					left: 50%;
+					position: absolute;
+					width: 50%;
+				}
+			}
+
+			&:focus {
+				outline: auto;
+			}
 		}
 	}
 }
