WDSBT-188 - Fix navigation menu

--- a/assets/scss/blocks/core/navigation.scss
+++ b/assets/scss/blocks/core/navigation.scss
@@ -106,84 +106,92 @@
 				}
 			}
 		}
-	}
 
-	.wp-block-navigation__submenu-icon {
-		height: 1rem;
-		width: 1rem;
+		&.has-child {
+			padding: 0.5rem 1rem 0.5rem 0.625rem;
 
-		&[aria-expanded='true'] {
-			transform: rotate(-180deg);
-		}
-	}
-
-	.wp-block-navigation-item.has-child {
-
-		.wp-block-navigation__submenu-container {
-			border: none;
-			box-shadow:
-				0 16px 24px 0 rgba(48, 49, 51, 0.09),
-				0 0 1px 0 rgba(48, 49, 51, 0.05);
-			padding: 0;
-
-			> .wp-block-navigation-item {
-				display: block;
+			.wp-block-navigation__submenu-container {
 				border: none;
+				box-shadow:
+					0 16px 24px 0 rgba(48, 49, 51, 0.09),
+					0 0 1px 0 rgba(48, 49, 51, 0.05);
 				padding: 0;
-				width: 100%;
 
-				> .wp-block-navigation-item__content {
+				> .wp-block-navigation-item {
 					display: block;
-					flex-grow: unset;
-					gap: 0;
-					padding: 0.3125rem 0.625rem;
+					border: none;
+					padding: 0;
 					width: 100%;
 
-					&::before,
-					&::after {
-						content: '';
-						left: 50%;
-						transition: all 0.3s ease;
-						width: 0;
-					}
+					> .wp-block-navigation-item__content {
+						display: block;
+						flex-grow: unset;
+						gap: 0;
+						padding: 0.3125rem 2rem 0.3125rem 0.625rem;
+						width: 100%;
 
-					&:hover,
-					&:active {
-
-						&::before {
-							background: var(
-								--wp--custom--navigation-sublink-background--background
-							);
-							bottom: 0;
-							content: '';
-							height: 100%;
-							left: 0;
-							position: absolute;
-							width: 50%;
-						}
-
+						&::before,
 						&::after {
-							background: var(
-								--wp--custom--navigation-sublink-background--background
-							);
-							bottom: 0;
 							content: '';
-							height: 100%;
 							left: 50%;
-							position: absolute;
-							width: 50%;
+							transition: all 0.3s ease;
+							width: 0;
 						}
 
-						.wp-block-navigation-item__label {
-							color: var(
-								--wp--custom--navigation-sublink-hover--color
-							);
-							position: relative;
-							z-index: 1;
+						&:hover,
+						&:active {
+
+							&::before {
+								background: var(
+									--wp--custom--navigation-sublink-background--background
+								);
+								bottom: 0;
+								content: '';
+								height: 100%;
+								left: 0;
+								position: absolute;
+								width: 50%;
+							}
+
+							&::after {
+								background: var(
+									--wp--custom--navigation-sublink-background--background
+								);
+								bottom: 0;
+								content: '';
+								height: 100%;
+								left: 50%;
+								position: absolute;
+								width: 50%;
+							}
+
+							.wp-block-navigation-item__label {
+								color: var(
+									--wp--custom--navigation-sublink-hover--color
+								);
+								position: relative;
+								z-index: 1;
+							}
 						}
 					}
 				}
 			}
+
+			.wp-block-navigation__submenu-icon {
+				right: 0;
+				position: absolute;
+				top: 35%;
+			}
+		}
+	}
+
+	.wp-block-navigation__submenu-icon {
+		background-color: transparent;
+		height: 0.75rem;
+		width: 0.75rem;
+
+		&[aria-expanded='true'] {
+			transform: rotate(-180deg);
 		}
 	}
 }
@@ -277,8 +285,43 @@
 /* Mobile only menu */
 @include responsive-mixins.responsive-max(833px) {
 
+	.is-root-container .header-container,
+	.site-header .header-container {
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+	}
+
 	.wp-block-navigation__container.is-responsive {
 		width: 100%;
+	}
+
+	/* Mobile submenu behavior */
+	.wp-block-navigation-item.has-child {
+
+		.wp-block-navigation__submenu-container {
+			display: none;
+			transition: all 0.3s ease;
+
+			.wp-block-navigation__submenu-container {
+				left: 100%;
+				right: auto;
+			}
+		}
+
+		&:hover {
+
+			.wp-block-navigation__submenu-container {
+				display: block;
+				transition: all 0.3s ease;
+			}
+		}
+	}
+
+	/* Make submenu icon more clickable on mobile */
+	.wp-block-navigation__submenu-icon {
+		cursor: pointer;
+		padding: 0.25rem;
+		margin-left: 0.5rem;
 	}
 }
 
