--- a/assets/scss/base/pagination.scss
+++ b/assets/scss/base/pagination.scss
@@ -3,7 +3,7 @@
 .post-nav-links {
 	display: flex;
 	font-family: var(--wp--preset--font-family--body);
-	font-size: var(--wp--preset--font-size--xs);
+	font-size: var(--wp--preset--font-size--small);
 	justify-content: center;
 	margin: var(--wp--preset--spacing--30) auto;
 	padding-left: 2.25rem;
@@ -20,7 +20,7 @@
 	}
 
 	.post-page-numbers {
-		color: var(--wp--preset--color--primary-500);
+		color: var(--wp--preset--color--contrast);
 		padding-right: 0.625rem;
 		text-decoration: none;
 		text-indent: 0;
@@ -34,13 +34,13 @@
 		}
 
 		&.current {
-			color: var(--wp--preset--color--primary-700);
+			color: var(var(--wp--preset--color--accent-1));
 			font-weight: 700;
 		}
 
 		&:hover,
 		&:focus {
-			color: var(--wp--preset--color--primary-700);
+			color: var(var(--wp--preset--color--accent-1));
 		}
 	}
 }
