--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -2,12 +2,15 @@
 
 /* -- Button -- */
 .wp-block-button {
+	padding: var(--wp--preset--spacing--20);
 
 	.wp-block-button__link {
 		align-items: center;
+		border: 1px solid currentcolor;
 		display: inline-flex;
 		justify-content: center;
 		position: relative;
+		transition: all 0.2s ease-in-out;
 		z-index: 1;
 
 		&:disabled,
@@ -15,6 +18,13 @@
 			cursor: not-allowed;
 			opacity: 0.15;
 			pointer-events: none;
+		}
+
+		&:hover,
+		&:focus {
+			background-color: var(--wp--preset--color--accent-1);
+			border: 1px solid var(--wp--preset--color--accent-1);
+			color: var(--wp--preset--color--contrast);
 		}
 	}
 
@@ -25,18 +35,6 @@
 			background-color: transparent;
 			border: 1px solid transparent;
 			color: var(--wp--preset--color--contrast);
-		}
-	}
-
-	&.is-style-outline,
-	&.is-style-minimal {
-
-		.wp-block-button__link {
-
-			&:hover {
-				background-color: var(--wp--preset--color--base);
-				border: 1px solid var(--wp--preset--color--contrast);
-			}
 		}
 	}
 
