WDSBT-188 - Adjust core styles

--- a/assets/scss/base/global.scss
+++ b/assets/scss/base/global.scss
@@ -38,6 +38,8 @@ sup {
 
 		&:not(.wp-block-social-link-anchor):not(.back-to-top):not(
 				.wp-block-button__link
+			):not(.wp-block-file__button):not(.wp-block-file__button-text):not(
+				.wp-block-file__button-text-inner
 			) {
 			color: var(--wp--preset--color--accent-1);
 			cursor: pointer;
