--- a/assets/scss/blocks/core/file.scss
+++ b/assets/scss/blocks/core/file.scss
@@ -25,6 +25,7 @@
 		display: inline-flex;
 		justify-content: center;
 		margin-left: 1.5rem;
+		padding-right: var(--wp--preset--spacing--40);
 		position: relative;
 		z-index: 1;
 
